--- a/projectnode/views/stocks.hbs
+++ b/projectnode/views/stocks.hbs
@@ -2,17 +2,20 @@
 <table>
     <thead>
         <tr>
-            {{#each stocks.[0]}}
-            <th>{{@key}}</th>
-            {{/each}}
+            <th>Stock ID</th>
+            <th>Title</th>
+            <th>In-Stock</th>
+            <th>Rented-Out</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
         {{#each stocks}}
         <tr>
-            {{#each this}}
-            <td>{{this}}</td>
-            {{/each}}
+            <td>{{this.stockID}}</td>
+            <td>{{this.gameName}}</td>
+            <td>{{this.numItem}}</td>
+            <td>{{this.numRented}}</td>
             <td>
                 <form id="delete_stock_form">
                     <input type="hidden" name="delete_stock_id" value="{{this.stockID}}" />
