--- a/projectnode/views/layouts/main.hbs
+++ b/projectnode/views/layouts/main.hbs
@@ -17,6 +17,9 @@
         <a href="/stocks">Stocks</a>
         <a href="/stocks-has-orders">Stocks Has Orders</a>
         <a href="/stocks-has-rentals">Stocks Has Rentals</a>
+        <form id="reset_db_form" method="POST" action="/reset-db" style="display:inline;">
+            <button type="submit" style="background-color:#218614;color:white;border:none;padding:8px 16px;border-radius:4px;cursor:pointer;">RESET</button>
+        </form>
     </nav>
 
     {{{body}}}
