--- a/projectnode/views/stocks-has-rentals.hbs
+++ b/projectnode/views/stocks-has-rentals.hbs
@@ -13,7 +13,7 @@
             <td>{{this.stockID}}</td>
             <td>{{this.rentalID}}</td>
             <td>
-                <form id="delete_stock_rental_form">
+                <form id="delete_stock_rental_form" method="POST" action="/stocks-has-rentals/delete">
                     <input type="hidden" name="delete_stock_id" value="{{this.stockID}}" />
                     <input type="hidden" name="delete_rental_id" value="{{this.rentalID}}" />
                     <button type="submit">Delete</button>
@@ -25,7 +25,7 @@
 </table>
 
 <h2>Update a Stock-Rental Association</h2>
-<form id="update_stock_rental_form">
+<form id="update_stock_rental_form" method="POST" action="/stocks-has-rentals/update">
     <label for="update_stock_id">Stock ID: </label>
     <select name="update_stock_id" id="update_stock_id" required>
         <option value="" disabled selected>Select a Stock</option>
