--- a/projectnode/views/board-games.hbs
+++ b/projectnode/views/board-games.hbs
@@ -24,7 +24,7 @@
                 <form id='delete_game_form'>
                     <input type='hidden' name='delete_game_id' value='{{this.id}}' />
                     <input type='hidden' name='delete_game_name' value='{{this.gameName}}' />
-                    <button type='submit'>
+                    <button type='submit' class='delete-btn'>
                         Delete
                     </button>
                 </form>
