--- a/projectnode/views/home.hbs
+++ b/projectnode/views/home.hbs
@@ -1,4 +1,8 @@
-<h1>Home page</h1>
+<h1>Home</h1>
 <div class="homepageDescription">
-    <p>Developer information and Project overview here.</p>
+    <p>Board Game Shop Database Management System developed by Chris Sexton & Shane Bliss</p>
+</div>
+
+<div class="homepageDescription">
+    <p>This website is a backend tool for managing all database requirements. From here you can interface with board game and genre data, customer information, an overview of the current stock, and interface with tables providing data relating to orders and rentals.  </p>
 </div>
