--- a/projectnode/views/stocks-has-orders.hbs
+++ b/projectnode/views/stocks-has-orders.hbs
@@ -4,7 +4,7 @@
         <tr>
             <th>Stock ID</th>
             <th>Order ID</th>
-            <th>Actions</th>
+            {{!-- <th>Actions</th> --}}
         </tr>
     </thead>
     <tbody>
@@ -12,18 +12,13 @@
         <tr>
             <td>{{this.stockID}}</td>
             <td>{{this.orderID}}</td>
-            <td>
-                <form id="delete_stock_order_form" method="POST" action="/stocks-has-orders/delete">
-                    <input type="hidden" name="delete_stock_id" value="{{this.stockID}}" />
-                    <input type="hidden" name="delete_order_id" value="{{this.orderID}}" />
-                    <button type="submit">Delete</button>
-                </form>
-            </td>
+            {{!-- <td> ...actions... </td> --}}
         </tr>
         {{/each}}
     </tbody>
 </table>
 
+{{!--
 <h2>Update a Stock-Order Association</h2>
 <form id="update_stock_order_form" method="POST" action="/stocks-has-orders/update">
     <label for="update_stock_id">Stock ID: </label>
@@ -44,3 +39,4 @@
 
     <input type="submit" />
 </form>
+--}}
