--- a/projectnode/views/customers.hbs
+++ b/projectnode/views/customers.hbs
@@ -23,7 +23,7 @@
             <td>
                 <form id="delete_customer_form" method="POST" action="/customers/delete">
                     <input type="hidden" name="delete_customer_id" value="{{this.customerID}}" />
-                    <button type="submit">Delete</button>
+                    <button type="submit" class="delete-btn">Delete</button>
                 </form>
             </td>
         </tr>
