--- a/projectnode/views/genres.hbs
+++ b/projectnode/views/genres.hbs
@@ -17,7 +17,7 @@
             <td>
                 <form id="delete_genre_form">
                     <input type="hidden" name="delete_genre_id" value="{{this.genreID}}" />
-                    <button type="submit">Delete</button>
+                    <button type="submit" class="delete-btn">Delete</button>
                 </form>
             </td>
         </tr>
