--- a/projectnode/views/orders.hbs
+++ b/projectnode/views/orders.hbs
@@ -19,7 +19,7 @@
             <td>
                 <form id="delete_order_form" method="POST" action="/orders/delete">
                     <input type="hidden" name="delete_order_id" value="{{this.orderID}}" />
-                    <button type="submit">Delete</button>
+                    <button type="submit" class="delete-btn">Delete</button>
                 </form>
             </td>
         </tr>
