--- a/projectnode/views/rentals.hbs
+++ b/projectnode/views/rentals.hbs
@@ -21,7 +21,7 @@
             <td>
                 <form id="delete_rental_form" method="POST" action="/rentals/delete">
                     <input type="hidden" name="delete_rental_id" value="{{this.rentalID}}" />
-                    <button type="submit">Delete</button>
+                    <button type="submit" class="delete-btn">Delete</button>
                 </form>
             </td>
         </tr>
