--- a/projectnode/views/stocks.hbs
+++ b/projectnode/views/stocks.hbs
@@ -44,7 +44,7 @@
 --}}
 
 <h2>Update a Stock</h2>
-<form id="update_stock_form">
+<form id="update_stock_form" method="POST" action="/stocks/update">
     <label for="update_stock_id">Stock to Update: </label>
     <select name="update_stock_id" id="update_stock_id" required>
         <option value="" disabled selected>Select a Stock</option>
