--- a/projectnode/views/genres.hbs
+++ b/projectnode/views/genres.hbs
@@ -1,32 +1,23 @@
-<h1>Board Games</h1>
-
+<h1>Genres</h1>
 <table>
     <thead>
         <tr>
-            <th>Board Game ID</th>
-            <th>Title</th>
-            <th>Number of Players</th>
-            <th>Price</th>
-            <th>Genre</th>
+            <th>Genre ID</th>
+            <th>Name</th>
+            <th>Description</th>
             <th>Actions</th>
         </tr>
     </thead>
-
     <tbody>
-        {{#each boardGames}}
+        {{#each genres}}
         <tr>
-            <td>{{this.id}}</td>
-            <td>{{this.gameName}}</td>
-            <td>{{this.numPlayer}}</td>
-            <td>{{this.gamePrice}}</td>
-            <td>{{this.genre}}</td>
+            <td>{{this.genreID}}</td>
+            <td>{{this.genreName}}</td>
+            <td>{{this.genreDescription}}</td>
             <td>
-                <form id='delete_game_form' method="POST" action="/board-games/delete">
-                    <input type='hidden' name='delete_game_id' value='{{this.id}}' />
-                    <input type='hidden' name='delete_game_name' value='{{this.gameName}}' />
-                    <button type='submit' class='delete-btn'>
-                        Delete
-                    </button>
+                <form id="delete_genre_form" method="POST" action="/genres/delete">
+                    <input type="hidden" name="delete_genre_id" value="{{this.genreID}}" />
+                    <button type="submit" class="delete-btn">Delete</button>
                 </form>
             </td>
         </tr>
@@ -34,53 +25,32 @@
     </tbody>
 </table>
 
-<h2>Add a New Board Game</h2>
-<form class='cuForm' id='create_game_form' method="POST" action="/board-games/create">
-    <label for='create_game_name'>Game Name: </label>
-    <input type='text' name='create_game_name' id='create_game_name' required />
+<h2>Add a New Genre</h2>
+<form id="create_genre_form" class="cuForm" method="POST" action="/genres/create">
+    <label for="create_genre_name">Genre Name: </label>
+    <input type="text" name="create_genre_name" id="create_genre_name" required />
 
-    <label for='create_game_genre'>Genre: </label>
-    <select name='create_game_genre' id='create_game_genre'>
-        <option value='' disabled selected>Select a Genre</option>
-        {{#each genres}}
-        <option value='{{this.id}}'>{{this.name}}</option>
-        {{/each}}
-    </select>
+    <label for="create_genre_description">Description: </label>
+    <textarea name="create_genre_description" id="create_genre_description" required></textarea>
 
-    <label for='create_game_numPlayer'>Number of Players: </label>
-    <input type='text' name='create_game_numPlayer' id='create_game_numPlayer' required />
-
-    <label for='create_game_price'>Price: </label>
-    <input type='number' name='create_game_price' id='create_game_price' step='0.01' required />
-
-    <input type='submit' />
+    <input type="submit" />
 </form>
 
-<h2>Update a Board Game</h2>
-<form class='cuForm' id='update_game_form' method="POST" action="/board-games/update">
-    <label for='update_game_id'>Game to Update: </label>
-    <select name='update_game_id' id='update_game_id' required>
-        <option value='' disabled selected>Select a Game</option>
-        {{#each boardGames}}
-        <option value='{{this.id}}'>
-            {{this.id}} - {{this.gameName}}
-        </option>
-        {{/each}}
-    </select>
-
-    <label for='update_game_genre'>Genre: </label>
-    <select name='update_game_genre' id='update_game_genre'>
-        <option value='' disabled selected>Select a Genre</option>
+<h2>Update a Genre</h2>
+<form id="update_genre_form" class="cuForm" method="POST" action="/genres/update">
+    <label for="update_genre_id">Genre to Update: </label>
+    <select name="update_genre_id" id="update_genre_id" required>
+        <option value="" disabled selected>Select a Genre</option>
         {{#each genres}}
-        <option value='{{this.id}}'>{{this.name}}</option>
+        <option value="{{this.genreID}}">{{this.genreName}}</option>
         {{/each}}
     </select>
 
-    <label for='update_game_numPlayer'>Number of Players: </label>
-    <input type='text' name='update_game_numPlayer' id='update_game_numPlayer' required />
+    <label for="update_genre_name">New Name: </label>
+    <input type="text" name="update_genre_name" id="update_genre_name" required />
 
-    <label for='update_game_price'>Price: </label>
-    <input type='number' name='update_game_price' id='update_game_price' step='0.01' required />
+    <label for="update_genre_description">New Description: </label>
+    <textarea name="update_genre_description" id="update_genre_description" required></textarea>
 
-    <input type='submit' />
+    <input type="submit" />
 </form>
